Fixed gap between image and navbar, just custom padding top rem was reason

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  padding-top: 5rem;
+  padding-top: 3.5rem;
 }
 
 /* Hallitus and toimihenkilöt styles */
